<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BiVia</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message!</string>
    <string name="send">Send</string>
    <string name="title_activity_display_message">Message from myself</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>         
    <string name="play_services_available">Play services found</string>
    <string name="gps_booting">Waiting for GPS&#8230;</string>
    <string name="gps_ok">GPS is up &amp; running</string>
    <string name="gps_connected">GPS service connected</string>
    <string name="gps_disconnected">GPS gone. Please reconnect!</string>
    <string name="gps_location_update">GPS location update received</string>
    
    <string name="gps_count">000.000 km</string>
    <string name="elapsed_time">00:00:00</string>
    <string name="average_speed">000.000 km/h</string>
    
    <string name="no_gps_service">No GPS service found on this piece of hardware!</string>
    <string name="forced_exit">Exiting&#8230;</string>
    <string name="enable_gps_title">GPS is disabled</string>
    <string name="enable_gps_prompt">BiVia needs GPS data to measure distances.</string>
    <string name="enable_gps_button">ENABLE GPS</string>
    
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_ride_title">No undo!</string>
    <string name="delete_ride_message">Do you really want to delete the ride?</string>
    
    <string name="googleError_title">Error</string>
    <string name="googleError_text">Google Play Location Services have just messed up something&#8230;</string>
    
    <string name="enable_internet">No internet connection! Please turn on the Wifi or the mobile net!</string>
    <string name="bam_login_failed">Could not log in with this user: </string>
    <string name="bam_upload_failed">Could not upload: </string>
    <string name="bam_upload_ok">Uploaded: </string>
    <string name="bam_open_failed">Could not open site: </string>
    
    <!-- log messages -->
    <string name="problem_resolved_by_play_services">Problem resolved by Google Play Service</string>
    <string name="problem_not_resolved_by_play_services">Problem could not be resolved by Google Play Service</string>
    <string name="unknown_activity_request_code">Unknown activity request code!</string>
    <string name="delete">Delete</string>
    <string name="ride_deleted">Not implemented yet&#8230;</string>
    
    <!-- BAM -->
    <string name="bam_preferences_title">BAM Hungary User</string>
    <string name="bam_preferences_username_title">Name</string>
    <string name="bam_preferences_password_title">Password</string>
    <string name="bam_preferences_username_summary">User name as registered on the BAM web site www.bam.hu.</string>
    <string name="bam_preferences_password_summary">Password as registered on the BAM web site www.bam.hu.</string>
    <string name="bam_user_not_set">Please set enter your BAM account details in order to be able to upload your rides!</string>
    
</resources>
