<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/bam_preferences_title"
        android:key="preference_key_bam_category">
        
        <EditTextPreference 
            android:key="preference_key_bam_user_name"
            android:title="@string/bam_preferences_username_title"
            android:summary="@string/bam_preferences_username_summary"
            android:defaultValue=""/>
        <EditTextPreference 
            android:key="preference_key_bam_password"
            android:title="@string/bam_preferences_password_title"
            android:summary="@string/bam_preferences_password_summary"
            android:defaultValue=""/>
    </PreferenceCategory>

</PreferenceScreen>