<LinearLayout    
    xmlns:android="http://schemas.android.com/apk/res/android"    
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:background="#352b2b"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    
        <RelativeLayout
            android:id="@+id/gpsWaitingGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:visibility="invisible" >

           <ProgressBar               
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="3dp" />
            <TextView                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:paddingTop="8dp"
                android:text="@string/gps_booting"
                android:textColor="#eeeeee" />
        </RelativeLayout>        
            
        <RelativeLayout
            android:id="@+id/gpsHitGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="invisible"
            android:gravity="center"  >

            <TextView
                android:id="@+id/gps_progress"                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36dp"
                android:paddingTop="8dp"
                android:text="@string/gps_ok"
                android:textAlignment="center"
                android:textColor="#eeeeee"
                />
            
            <ImageView                 
                android:src="@drawable/stat_sys_gps_on"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="3dp"
                android:contentDescription="@string/gps_location_update"                
                />
        </RelativeLayout>            
        
        <Button
            android:id="@+id/enableGPSButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="enableGPSButtonClicked"
            android:text="@string/enable_gps_button"
            android:textColor="#eeeeee"
            android:textColorHint="#dddddd"
            android:textSize="24sp" />
        
    </RelativeLayout>
    
     <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="4sp"
        android:layout_marginTop="4sp"
        android:background="#443838" />
    
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center" >

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="1dp"
            android:paddingTop="1dp"
            android:text="@string/gps_count"
            android:textColor="#21addb"
            android:textSize="40sp"
            android:textStyle="bold" />

            <TextView
                android:id="@+id/ellapsedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/distanceTextView"
                android:paddingBottom="2dp"
                android:text="@string/elapsed_time"
                android:textAlignment="center"
                android:textColor="#222222"
                android:textSize="18sp" />
            
            <TextView
                android:id="@+id/averageSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/distanceTextView"
                android:layout_below="@id/distanceTextView"
                android:paddingBottom="2dp"
                android:text="@string/average_speed"
                android:textAlignment="center"
                android:textColor="#222222"
                android:textSize="18sp" />

    </RelativeLayout>

   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

       <Button
           android:id="@+id/startButton"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:onClick="startButtonClicked"
           android:text="@string/start"
           android:textColor="#eeeeee"
           android:textColorHint="#dddddd"
           android:textSize="24sp" />

       <Button
           android:id="@+id/stopButton"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:linksClickable="true"
           android:onClick="stopButtonClicked"
           android:text="@string/stop"
           android:textColor="#eeeeee"
           android:textColorHint="#dddddd"
           android:textSize="24sp" />

   </LinearLayout>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4sp"
        android:layout_marginBottom="4sp"
        android:background="#443838" />
    
    <ExpandableListView
        android:id="@+id/measuredDays"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        
        android:layout_marginLeft="4sp"
        android:layout_marginRight="4sp"
        
        android:childDivider="#352b2b"
        android:choiceMode="none"
        android:transcriptMode="normal"
        />
        
</LinearLayout>